--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -37,6 +37,9 @@ $grid-breakpoints: (
 $grid-columns:		12;
 $grid-gutter-width:	20px;
 
+
+// $component-active-bg: #000;
+
 // Цвета
 $text-muted: #999999;
 
