--- a/resources/sass/_styles.scss
+++ b/resources/sass/_styles.scss
@@ -28,6 +28,32 @@
     }
 }
 
+body {
+    &.modal-open {
+        height: 100vh;
+        @include media-breakpoint-up(lg) {
+            padding-right: 1.05rem;
+        }
+    }
+}
 footer {
     background-color: $footer-bg;
+}
+
+// оверлей
+.overlay {
+    display: none;
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.25);
+    z-index: 998;
+    opacity: 0;
+    transition: all 0.5s ease-in-out;
+    top: 0;
+    left: 0;
+}
+.overlay.active {
+    display: block;
+    opacity: 1;
 }
