--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -14,7 +14,7 @@ $headings-font-weight: 700;
 // $display1-size:               6rem !default;
 // $display2-size:               5.5rem !default;
 // $display3-size:               4.5rem !default;
-$display4-size:	3.1rem;
+$display4-size:	2.8rem;
 
 // варианты размера шрифта
 $v-font-sizes: '12', '15', '16';
@@ -36,6 +36,11 @@ $grid-breakpoints: (
 // настройка гридов
 $grid-columns:		12;
 $grid-gutter-width:	20px;
+
+$spacers: (
+	main: $grid-gutter-width / 2,
+	// 6: 4rem
+);
 
 
 // $component-active-bg: #000;
