--- a/resources/sass/_styles.scss
+++ b/resources/sass/_styles.scss
@@ -22,13 +22,17 @@
 	}
 }
 
+html, body {
+    height: 100%;
+}
 .wrapper {
     @include media-breakpoint-up(lg) {
         margin: 0 100px;
     }
 }
-
 body {
+    display: flex;
+    flex-direction: column;
     &.modal-open {
         height: 100vh;
         @include media-breakpoint-up(lg) {
@@ -36,10 +40,12 @@ body {
         }
     }
 }
+.content {
+    flex: 1 0 auto;
+}
 footer {
     background-color: $footer-bg;
 }
-
 // оверлей
 .overlay {
     display: none;
