--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -44,5 +44,6 @@
 // @import "~bootstrap/scss/print";
 
 // Styles
-@import 'navbar';
-@import 'styles';
+@import 'extended'; // расширения функционала bootstrap своими классами
+@import 'navbar'; // переписан бутстраповский + стили к сайту для navbar
+@import 'styles'; // стили которые относятся исключительно к этому сайту
