--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,6 +8,8 @@
 @import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
 @import "~bootstrap/scss/mixins";
+@import "mixins-overrides"; // переопределение миксинов
+
 @import "~bootstrap/scss/root";
 @import "~bootstrap/scss/reboot";
 @import "~bootstrap/scss/type";
